# playwright-ui5-select

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  mirror-check.sh  pyproject.toml
.github/workflows/: main.yml  mirror.yml  test-and-release.yml
src/playwright_ui5_select/: __init__.py
src/playwright_ui5_select/import/ui5/: xpath.js
src/playwright_ui5_select/imported/playwright-ui5/: test.js
src/playwright_ui5_select/tests/: conftest.py  test_playwright.py
