[project]
name = "playwright-ui5-select"
version = "0.0.6"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "James", email = "jyfchen57@yahoo.com.au" }
]
requires-python = ">=3.13"
dependencies = []
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://example.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
exclude = ["tests"]

[dependency-groups]
dev = [
    "basedpyright>=1.29.2",
    "pytest-playwright>=0.7.0",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
