[project]
name = "playwright-ui5-select"
version = "0.0.6"
description = "Use UI5 selectors with Playwright"
readme = "README.md"
authors = [
    { name = "James", email = "jyfchen57@yahoo.com.au" }
]
requires-python = ">=3.9"
dependencies = []
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Repository = "https://github.com/JamesYFC/playwright-ui5-select"

[dependency-groups]
dev = [
    "basedpyright>=1.29.2",
    "pytest-playwright>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
exclude = ["tests"]

[tool.basedpyright]
reportIncompatibleUnannotatedOverride = 'error'
reportUnannotatedClassAttribute = 'none'
reportUnusedCallResult = false

[tool.pytest.ini_options]
addopts = "--headed --browser chromium"
